--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -35,6 +35,7 @@ jobs:
 
     - name: Create application.yml
       run: |
+        mkdir ./src/main/resources
         echo "${{env.APPLICATION}}" > ./src/main/resources/application.yml
         
     - name: Grant execute permission for gradlew
